[package]
name = "photo_sort"
version = "0.2.2"
edition = "2021"
description = """
A tool to rename and sort photos/videos by its EXIF date/metadata. It tries to extract the date
from the EXIF data or file name and renames the image file according to a given
format string.

Foreach source directory all images are processed and renamed to the target directory"""
readme = "README.md"
keywords = ["photo", "sort", "exif", "rename", "date"]
license = "GPL-3.0-or-later"
homepage = "https://github.com/0xCCF4/PhotoSort"
repository = "https://github.com/0xCCF4/PhotoSort"
documentation = "https://docs.rs/photo_sort"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.90"
chrono = "0.4.34"
kamadak-exif = "0.5.5"
clap = { version = "4.5.20", features = ["derive"] }
regex = "1.11.0"
lazy_static = "1.5.0"
log = "0.4.22"
filetime = "0.2.25"
symlink = "0.1.0"
ffmpeg-next = { version = "7.1.0", optional = true }
fern = { version = "0.7.0", features = ["colored"], optional = true }
indicatif = { version = "0.17.8", optional = true }
indicatif-log-bridge = { version = "0.2.3", optional = true }

[features]
default = ["binary"]
video = ["dep:ffmpeg-next"] # enable video support
binary = ["dep:fern", "dep:indicatif", "dep:indicatif-log-bridge"] # enable main.rs dependencies
