[package]
name = "photo_sort"
version = "0.2.11"
edition = "2021"
description = """
A tool to rename and sort photos/videos by its EXIF date/metadata. It tries to extract the date
from the EXIF data or file name and renames the image file according to a given
format string.

Foreach source directory all images are processed and renamed to the target directory"""
readme = "README.md"
keywords = ["photo", "sort", "exif", "rename", "date"]
license = "GPL-3.0-or-later"
homepage = "https://github.com/0xCCF4/PhotoSort"
repository = "https://github.com/0xCCF4/PhotoSort"
documentation = "https://docs.rs/photo_sort"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.100"
chrono = "0.4.42"
kamadak-exif = "0.6.1"
clap = { version = "4.5.48", features = ["derive"] }
regex = "1.12.1"
log = "0.4.28"
filetime = "0.2.26"
symlink = "0.1.0"
ffmpeg-next = { version = "8.0.0", optional = true }
fern = { version = "0.7.1", features = ["colored"], optional = true }
indicatif = { version = "0.18.0", optional = true }
threadpool = { version = "1.8.1", optional = true }

[features]
default = ["binary"]
video = ["dep:ffmpeg-next"] # enable video support
binary = ["dep:fern", "dep:indicatif", "dep:threadpool"] # enable main.rs dependencies

[[bin]]
name = "photo_sort"
required-features = ["binary"]
